<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GhostMC</string>
    <string name="share">Share</string>
    <string name="json_example">Example of JSON with keys:</string>
    <string name="saved_keys">File loaded:</string>
    <string name="no_keys">No keys.</string>
    <string name="delete_card">Delete</string>
    <string name="read_card">Read</string>
    <string name="write_card">Clone</string>
    <string name="manage_keys">Keys</string>
    <string name="save_card">Save tag</string>
    <string name="close_tag">Approach tag…</string>
    <string name="write">Write</string>
    <string name="name">Name…</string>
    <string name="empty">Empty</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="continue_question">Continue?</string>
    <string name="delete_saved_card">Delete saved tag?</string>
    <string name="delete_keys">Delete keys</string>
    <string name="delete_keys_question">Delete saved keys?</string>
    <string name="deleted_keys">Keys deleted</string>
    <string name="deleted_card">Tag deleted</string>
    <string name="saved_card">Tag saved</string>
    <string name="no_mifare">Your device doesn\'t support MiFare Classic :(</string>
    <string name="firs_save_card">First read a tag and save it…</string>
    <string name="loading">Loading…</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="error">Error :(</string>
    <string name="confirm_write">Write selected content?</string>
    <string name="error_writing">Error writing :(</string>
    <string name="blocks_failed">Blocks failed:</string>
    <string name="write_success">Tag written successfully</string>
    <string name="write_block_0">Write the 0 block?</string>
    <string name="select_file">Select file</string>
    <string name="file_not_found">File not found</string>
    <string name="error_reading_file">Error reading file</string>
    <string name="error_parsing_json">The selected JSON doesn\'t have a valid structure</string>
    <string name="error_validating_json">The selected JSON doesn\'t have all valid keys</string>
    <string name="select_logo">Select the logo for the tag…</string>

</resources>
