<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.ghostmc.android.MainActivity">

    <LinearLayout
        android:gravity="center_horizontal"
        android:background="@drawable/header"
        android:layout_weight="1.1"
        android:layout_width="match_parent"
        android:layout_height="0dp" />
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/green_darkest"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:background="@color/green_lightest"
        android:layout_weight="0.7"
        android:layout_height="0dp">
        <android.support.v4.view.ViewPager
            android:id="@+id/carousel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:overScrollMode="never" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/green_dark"/>


    <LinearLayout
        android:orientation="vertical"
        android:layout_weight="1"
        android:paddingTop="15dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/reader"
                style="@style/MainButton"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/read_card"/>
            <Button
                android:id="@+id/writter"
                style="@style/MainButton"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/write_card"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/delete"
                style="@style/MainButton"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/delete_card"/>

            <Button
                android:id="@+id/keys"
                style="@style/MainButton"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/manage_keys"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
